# python-starter-template

./: .pre-commit-config.yaml  CLAUDE.md  README.md  devshell.toml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
src/pai/: main.py
tests/pai/: test_main.py
