[project]
name = "pai"
version = "0.1.0"
description = "Python AI centric starter template by softinio.com"
readme = "README.md"
authors = [
    { name = "Salar Rahmanian", email = "code@softinio.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic (>=0.86.0)",
    "httpx>=0.28.1",
    "huggingface-hub (>=1.7.2)",
    "mcp[cli] (>=1.26.0)",
    "openai (>=2.29.0)",
    "pydantic (>=2.12.5)",
    "pydantic-settings (>=2.13.1)",
    "rich (>=14.3.3)",
    "structlog (>=25.5.0)",
    "tenacity (>=9.1.4)",
]

[project.scripts]
pai = "pai.main:main"

[tool.poetry]
packages = [{include = "pai", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = ">=7.13.5"
debugpy = ">=1.8.20"
pre-commit = ">=4.5.1"
pyrefly = ">=0.57.1"
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
pytest-cov = ">=7.1.0"
pytest-dotenv = ">=0.5.2"
pytest-mock = ">=3.15.1"
pytest-sugar = ">=1.1.1"
black = ">=26.3.1"
isort = ">=8.0.1"
flake8 = ">=7.3.0"
flake8-bugbear = ">=25.11.29"
flake8-unused-arguments = ">=0.0.14"
flake8-print = ">=5.0.0"
flake8-type-checking = ">=3.2.0"
flake8-pyproject = ">=1.2.4"

[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
python_interpreter = ".venv/bin/python3"
python_version = "3.13"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
length_sort_straight = true
combine_as_imports = true
extra_standard_library = ["typing_extensions"]
known_first_party = ["tests"]

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",   # whitespace before ':' — black compatibility
    "E402",   # module level import not at top — not in original ruleset
    "E501",   # line too long — black handles line length; string literals cannot be wrapped
    "W503",   # line break before binary operator — black compatibility
    "B006",   # mutable defaults
    "TC001",  # move app import into TYPE_CHECKING block — not in original ruleset
    "TC002",  # move third-party import into TYPE_CHECKING block — not in original ruleset
    "TC003",  # move stdlib import into TYPE_CHECKING block — not in original ruleset
    "U101",   # unused argument prefixed with _ — intentionally unused by convention
]
per-file-ignores = [
    "bin/*.py:T201,T203",
    "scripts/*.py:T201,T203",
    "tests/*.py:T201,T203",
    "tests/**/*.py:T201,T203",
    "examples/*.py:T201,T203",
    "examples/**/*.py:T201,T203",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
env_files = [".env", ".test.env", ".deploy.env"]
python_files = ["test_*.py", "fixtures.py"]
asyncio_default_fixture_loop_scope = "function"

